@@ -1,3 +1,4 @@
+1/3/14 add additional options to LogConcentrationGraph
 1/3/14 add placeholder for quantity graph, wire up to AB switch
 1/3/14 wire up graph indicator values to solution
 1/3/14 make graph indicators non-interactive by default (no handle, no shadow)
